In progress of revising Section 5.

--- a/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
+++ b/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
@@ -154,6 +154,8 @@ comparison between the segments. As shown in Fig.~\ref{fig:ThreeTopologies_Displ
 of Cherenkov photons only still provides noticeable separation between all three event topologies.
 
 More realistic examples of \Te~ 0\nbb~and \B~events simulated at the center of the detector are shown in Fig.~\ref{fig:Te130_Display}. 
+\Te~ events are generated based on the phase factors described in~\ref{Kotila_phase_factors}.
+$^{8}$B events are implemented as monochromatic electrons with the initial direction along $x$-axis.
 Early photo-electrons (PEs), defined as those PEs from Cherenkov and scintillation light within 33.5~ns of the start of the event, are shown. 
 The default QE is applied.  In this more realistic example, the uniformly distributed scintillation light makes it more difficult to 
 visually distinguish the event topology. Nevertheless, Fig.~\ref{fig:Te130_Display}~(\emph{bottom panel}) shows that the spherical harmonics
