Work in progress on Sections 1-3

--- a/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
+++ b/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
@@ -60,13 +60,13 @@ vetoes to reduce muon spallation backgrounds. The backgrounds relevant to
 0{\nbb} decay which cannot be reduced through these means are the
 2{\nbb} decay, electron scattering of $^8$B solar neutrinos and at more shallow depths long-lived spallation products especially $^{10}$C$(\tau=xx, Q=XX)$.
 
-\begin{figure}[ht]
-\centering
-\includegraphics[width=0.49\columnwidth]{spectrum_plot_200_stack_nosums_nodata_inset_200mev.pdf}
-\includegraphics[width=0.49\columnwidth]{C10DecayScheme.pdf}
-\caption{ Plot taken from~\cite{SNOp_paper}}
-\label{fig:EdisAnd10C}
-\end{figure}
+%\begin{figure}[ht]
+%\centering
+%\includegraphics[width=0.49\columnwidth]{spectrum_plot_200_stack_nosums_nodata_inset_200mev.pdf}
+%\includegraphics[width=0.49\columnwidth]{C10DecayScheme.pdf}
+%\caption{ Plot taken from~\cite{SNOp_paper}}
+%\label{fig:EdisAnd10C}
+%\end{figure}
 
 
 The 0{\nbb} signal and these backgrounds have distinctive energy spectra. Since 0{\nbb} decay produces no neutrinos, the full energy of the
