Work in progress on Sec. 3

--- a/SphericalHarmonicsPaper/NIMA/25-EventTiming.tex
+++ b/SphericalHarmonicsPaper/NIMA/25-EventTiming.tex
@@ -1,8 +1,7 @@
 \section{Kinematics and Timing of Signal and Background events}
 
 
-\subsection{0\nbb- and 2\nbb-decay events}
-\subsubsection{Kinematics details of 0\nbb- and 2\nbb-decay events}
+\subsection{0\nbb-decay signal and 2\nbb-decay background}
 
 \begin{figure*}[ht]
   \centering
@@ -19,11 +18,11 @@
   \label{fig:Kinematics}
 \end{figure*}
 
-\subsubsection{PE timing of 0\nbb-decay events}
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=0.45\textwidth]{hT_Te130.pdf}
+  %\includegraphics[width=0.45\textwidth]{hT_Te130.pdf}
+  \includegraphics[width=0.45\textwidth]{hT_Te130vsC10_overlaid_v2.pdf}
   \includegraphics[width=0.45\textwidth]{hTche_Te130_B8.pdf}
   \caption{\emph{Left:} Photo-electron (PE) arrival times after
     application of the photo-detector transit time spread (TTS) of
@@ -58,23 +57,12 @@
 
 
 
-\subsection{\B~events}
-\subsubsection{Kinematics details of \B~events}
-\subsubsection{PE timing of \B~events}
+\subsection{\B~background}
 
 
 
+\subsection{\C~background}
 
-
-
-
-
-
-
-
-
-\subsection{\C~events}
-\subsubsection{Kinematics details of \C~events}
 
 \begin{figure}[ht]
   \centering
@@ -84,27 +72,6 @@
     which corresponds to Q-value of \Te~isotope. Vertical dashed lines indicate 2.28~MeV and 2.78~MeV which correspond to $\pm$10\% region 
     around the Q-value.}
 \label{fig:C10_scheme_and_edep}
-\end{figure}
-
-\subsubsection{PE timing of \C~events}
-
-\begin{figure}[h]
-  \centering
-%  \includegraphics[width=0.45\textwidth]{hT_C10.pdf}
-  \includegraphics[width=0.45\textwidth]{hT_Te130vsC10_overlaid_v2.pdf}
-  \includegraphics[width=0.45\textwidth]{hTche_C10.pdf}
-  \caption{Photo-electron (PE) arrival times after application of the
-    photo-detector transit time spread (TTS) of 100~ps for the
-    simulation of 1000 0{\nbb} decay events of $^{130}$Te (\emph{solid
-      lines}) and $^{10}$C (\emph{dotted lines}) events at the center
-    of the detector. All distributions are normalized for shape
-    comparison. {\bf Absolute number of PEs per event depends on the
-      total energy deposited in the
-      detector. Figure~\ref{fig:Edep_C10} shows energy deposited in
-      the detector in $^{10}$C events.} \emph{Left:} Scintillation PEs
-    arrival time. The black vertical line illustrates a time cut at
-    33.5 ns. \emph{Right:} Cherenkov PEs arrival time.}
-\label{fig:Arrival_time_C10}
 \end{figure}
 
 
