--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -1,33 +1,33 @@
 \section{Timing of photons coming from $^{10}$C background}
 
-Background from $\Cten$ could be significant at a shallow detector depth.
-Here we discuss separation of $\vbb$-decay events from $\Cten$ background using 
+Background from \Cten~could be significant at a shallow detector depth.
+Here we discuss separation of 0\nbb-decay events from \Cten~background using 
 differences in PE arrival time distributions between signal and background events.
-$\Cten$ decays to a positron and a gamma. The positron produces scintillation light 
+\Cten~decays to a positron and a gamma. The positron produces scintillation light 
 along its trajectory of a few mm before it stops and annihilates into two 0.511~keV 
-gammas. The kinetic energy of the positron from $\Cten$ is smaller than total kinetic
-energy of the electrons from $\vbb$-decay. Therefore the amount of scintillation 
+gammas. The kinetic energy of the positron from \Cten~is smaller than total kinetic
+energy of the electrons from 0\nbb-decay. Therefore the amount of scintillation 
 light produced at the primary vertex by the positron is smaller than the amount of 
-scintillation light produced by electrons in $\vbb$-decay. The scintillation light from 
+scintillation light produced by electrons in 0\nbb-decay. The scintillation light from 
 gammas is produced at several secondary verticies along gammas trajectories of $\sim X0$. 
-This results in a PE arrival time distribution for $\Cten$ events that is shifted towards 
-longer times with respect to the $\vbb$-decay events.
+This results in a PE arrival time distribution for \Cten~events that is shifted towards 
+longer times with respect to the 0\nbb-decay events.
 
 This time shift would be valid for any background with a positron in the final state. In 
-$\Cten$ this shift is increased because $\Cten$ decays via an excited state of $^{10}$B(718),
+\Cten~this shift is increased because \Cten~decays via an excited state of $^{10}$B(718),
 which has a half-life time of $\sim$1~ns, so that 0.718~MeV gamma has a delay with respect
 to the positron that is detectable by photo-detectors with $\sim$100~ps time resolution.
 
-In the following we assess the separation between $\vbb$-decay and $\Cten$ events due to the 
+In the following we assess the separation between 0\nbb-decay and \Cten~events due to the 
 time shift in the PE arrival time distribution. We discuss requirements on the primary vertex 
 reconstruction resolution and the time resolution of the photo-detectors.
 
 
 Typical energy deposition by $^{10}$C events is shown in
-Fig.~\ref{fig:Edep_C10}. Vertical lines indicate Q-value of $\Te$ and 
+Fig.~\ref{fig:Edep_C10}. Vertical lines indicate Q-value of \Te and 
 $\pm$10\% region around Q-value. In order to include detector energy resolution 
-effects we consider $\Cten$ events in this region, which is 2.276~MeV - 2.782~MeV.
-\footnote{Everywhere below we refer to this energy range for $\Cten$ events unless 
+effects we consider \Cten~events in this region, which is 2.276~MeV - 2.782~MeV.
+\footnote{Everywhere below we refer to this energy range for \Cten~events unless 
 stated otherwise}
 
 
@@ -35,7 +35,7 @@ stated otherwise}
   \centering
   \includegraphics[width=0.95\textwidth]{hEdep_C10.pdf}
   \caption{$^{10}$C energy deposition in the detector. Simulation of 10000 events
-  produced at the center of the detector. Solid red line at 2.529~MeV indicates $\Te$ 
+  produced at the center of the detector. Solid red line at 2.529~MeV indicates \Te 
   Q-value. Dashed red lines at 2.276~MeV and 2.782~MeV show $\pm$10\% region around 
   Q-value.}
   \label{fig:Edep_C10}
@@ -45,24 +45,24 @@ Since 98\% of $^{10}$C decays through an excited state of $^{10}$B(718),
 which has a half-life time of $\sim$1~ns, the majority of $^{10}$C events have 
 a prompt positron accompanied by a delayed 0.718~MeV gamma. The positron energy
 has to be 0.79~MeV for an event to have energy deposition equal to Q-value of
-$\Te$ $\vbb$-decay.
+\Te 0\nbb-decay.
 
-The positron from $\Cten$ on average travels 4~mm before it stops and annihilates
+The positron from \Cten~on average travels 4~mm before it stops and annihilates
 producing two 0.511~MeV gammas. Those gammas then interact in the scintillator via 
 Compton scattering and photo-electric effect along while they loose their energy
-over $\sim X_0$ distance. Therefore light emitted in $\Cten$ events originates from
+over $\sim X_0$ distance. Therefore light emitted in \Cten~events originates from
 several clusters that are spread over $\sim X_0$. Significant fraction of the 
 early PE would be due to primary positron cluster. Because the positron has smaller 
-kinetic energy than kinetic energy of electrons from $\vbb$-decay the amount of early 
-PE is smaller for $\Cten$ events. Delayed 0.718~MeV gamma in some of $\Cten$ events 
-also result in a delay in the photon arrival time with respect to $\vbb$-decay events.
+kinetic energy than kinetic energy of electrons from 0\nbb-decay the amount of early 
+PE is smaller for \Cten~events. Delayed 0.718~MeV gamma in some of \Cten~events 
+also result in a delay in the photon arrival time with respect to 0\nbb-decay events.
 
 Figure~\ref{fig:Arrival_time_C10_overlaid} compares PE arrival times between 
-$\vbb$-decay and $\Cten$ events. To separate the time shift due to smaller kinetic 
+0\nbb-decay and \Cten~events. To separate the time shift due to smaller kinetic 
 energy of the positron and due to the decay via a long lived $^{10}$B(718) state we 
-include simulation of prompt $\Cten$ decays. The prompt $\Cten$ is a simplified simulation 
+include simulation of prompt \Cten~decays. The prompt \Cten~is a simplified simulation 
 where a positron is simultaneously produced with a 0.718~MeV gamma. The difference between
-prompt $\Cten$ and $\vbb$-decay is caused by presence of a positron and this 
+prompt \Cten~and 0\nbb-decay is caused by presence of a positron and this 
 difference is typical on event by event level. An additional difference due to delayed
 gamma shown in Fig.~\ref{fig:Arrival_time_C10_overlaid} is an average effect over 1000 events. 
 Significant variations are possible on event by event level since $^{10}$B(718) decay 
@@ -81,9 +81,9 @@ time is exponential.
 \end{figure}
 
 As can be seen from Fig.~\ref{fig:Arrival_time_C10_overlaid} there is a noticeable difference
-in the shape of PEs arrival time distribution between $\vbb$-decay and $\Cten$ events. A fit
+in the shape of PEs arrival time distribution between 0\nbb-decay and \Cten~events. A fit
 to a template shapes can be used to discriminate between signal and background. In this study,
-to distinguish between $\vbb$-decay and $\Cten$ events we count total number of PEs in the
+to distinguish between 0\nbb-decay and \Cten~events we count total number of PEs in the
 early light sample. 
 
 Two definitions of the early light sample are used. First, for central events, where we assume 
@@ -98,10 +98,10 @@ in the scintillator, $r_{hit}$ is the position of the PE on the photo-detector, 
 reconstructed position of the primary vertex.
 
 
-Numbers of Cherenkov and scintillation PEs in early light samples for $\vbb$-decay and 
-$\Cten$ central events are shown in Fig.~\ref{fig:NPhotDist_C10}. Perfect reconstruction of the 
+Numbers of Cherenkov and scintillation PEs in early light samples for 0\nbb-decay and 
+\Cten~central events are shown in Fig.~\ref{fig:NPhotDist_C10}. Perfect reconstruction of the 
 primary vertex is assumed and a time cut of 33.5~ns is used to define early light sample. 
-Distributions of total number of PEs in the early light sample for $\vbb$-decay and $\Cten$ events
+Distributions of total number of PEs in the early light sample for 0\nbb-decay and \Cten~events
 normalized to the same number of simulated events are overlaid in Fig.~\ref{fig:NPhot_compare_central}.
 We conclude that counting PEs that arrive early provides effective separation between signal and
 background.
@@ -147,7 +147,7 @@ vertex.
   \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_allLight_VtxSmear0cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
   \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on 
 	vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
-        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared. 
+        0\nbb-decay (black solid line) and \Cten~events (magenta dashed line) are compared. 
 	Vertical line at 1~ns indicates cut for early light selection. 
         (Right) Total number of PEs in the early light sample. 
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value are
@@ -170,7 +170,7 @@ predicted time $T_{predicted}$ is defined as $r_{vtx}$=$R_{vtx} + G(R_{vtx},\sig
   \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_allLight_VtxSmear3cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
   \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
         vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
-        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        0\nbb-decay (black solid line) and \Cten~events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value are
@@ -189,7 +189,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 10~
   \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_allLight_VtxSmear10cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
   \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
         vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
-        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        0\nbb-decay (black solid line) and \Cten~events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value are
@@ -209,7 +209,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 30~
   \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_allLight_VtxSmear30cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
   \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
         vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
-        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        0\nbb-decay (black solid line) and \Cten~events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value. are
@@ -228,7 +228,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 50~
   \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_allLight_VtxSmear50cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
   \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
         vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
-        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        0\nbb-decay (black solid line) and \Cten~events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value are
