--- a/SphericalHarmonicsPaper/NIMA/authors.tex
+++ b/SphericalHarmonicsPaper/NIMA/authors.tex
@@ -1,12 +1,15 @@
 \author[UChicago]{Andrey Elagin\corref{cor1}}
 \cortext[cor1]{Corresponding Author: \href{mailto:elagin@hep.uchicago.edu}{\tt{elagin@hep.uchicago.edu}}}
 \author[UChicago]{Henry J. Frisch}
+\author[UCLA]{Brian Naranjo}
 \author[MIT,LBL]{Jonathan Ouellet}
 \author[MIT]{Lindley Winslow}
-\author[OPTIN]{{\bf Opt in}}
+\author[MIT]{Taritree Wongjirad}
+%\author[OPTIN]{{\bf Opt in}}
 
 
 \address[UChicago]{ Enrico Fermi Institute, University of Chicago, Chicago, IL, 60637 }
+\address[UCLA]{ University of California, Los Angeles, CA}
 \address[MIT]{ Massachusetts Institute of Technology, Cambridge, MA 02139 }
 \address[LBL]{ Nuclear Science Division, Lawrence Berkeley National Laboratory, Berkeley, CA 94720 }
-\address[OPTIN]{{\bf Please opt-in if you think you should be on the author list}}
+%\address[OPTIN]{{\bf Please opt-in if you think you should be on the author list}}
