Cosmetic changes to abstract. Credits in acknowledgments.

--- a/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
+++ b/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
@@ -10,7 +10,7 @@
 %\doublespacing
 \setstretch{1.5}
 
-\title{Separating Double-Beta Decay Events from Background in a Kiloton-Scale Directional Liquid Scintillator Detector}
+\title{Towards Separating Double-Beta Decay Events from Backgrounds in a Kiloton-Scale Directional Liquid Scintillator Detector}
 \input{authors}
 
 \begin{abstract}
@@ -51,7 +51,7 @@
 \section*{Acknowledgements}
 \input{acknowledgements}
 
-\bibliography{bibliography}
+\bibliography{bibliography.bib}
 
 %\appendix
 % The following line is a hack for elsevier to get the appendix and
