--- a/SphericalHarmonicsPaper/NIMA/abstract.tex
+++ b/SphericalHarmonicsPaper/NIMA/abstract.tex
@@ -1,10 +1,12 @@
 We propose a technique for separating 0{\nbb}-decay events from
 background due to $^{10}$C decays and $^8$B solar neutrino
 interactions in a liquid scintillator detector. These represent the
-key backgrounds at shallow and deep sites. The technique compares
+key backgrounds at shallow and deep sites. In particular, we focus
+on \B~background suppression which is traditionally viewed as irreducible
+background to 0\nbb-decay searches. The technique compares
 event topology of the signal and background events using spherical
-harmonics analysis of the early light emitted in 0{\nbb}-decay and
-$^8$B events. Selection of early photons using fast photo-detectors
+harmonics analysis of the early light emitted in signal and
+background events. Selection of early photons using fast photo-detectors
 allows for separation of directional Cherenkov from isotropic
-scintillation light and identification of two event topologies based
+scintillation light and identification of event topologies based
 on the spatial distribution of the early photons in the detector.
