--- a/SphericalHarmonicsPaper/NIMA/authors.tex
+++ b/SphericalHarmonicsPaper/NIMA/authors.tex
@@ -9,7 +9,7 @@
 
 
 \address[UChicago]{ Enrico Fermi Institute, University of Chicago, Chicago, IL, 60637 }
-\address[UCLA]{ University of California, Los Angeles, CA}
+\address[UCLA]{ University of California, Los Angeles, CA, 90024 }
 \address[MIT]{ Massachusetts Institute of Technology, Cambridge, MA 02139 }
 \address[LBL]{ Nuclear Science Division, Lawrence Berkeley National Laboratory, Berkeley, CA 94720 }
 %\address[OPTIN]{{\bf Please opt-in if you think you should be on the author list}}
