Minor changes to Intro and Conclusions

--- a/SphericalHarmonicsPaper/NIMA/25-EventTiming.tex
+++ b/SphericalHarmonicsPaper/NIMA/25-EventTiming.tex
@@ -1,5 +1,5 @@
 \section{Kinematics and Timing of Signal and Background events}
-
+\label{sec:kinematics_and_timing}
 
 \subsection{0\nbb-decay signal and 2\nbb-decay background}
 
