Adding minor changes to sync files prior to the split

--- a/SphericalHarmonicsPaper/NIMA/bibliography.bib
+++ b/SphericalHarmonicsPaper/NIMA/bibliography.bib
@@ -1,3 +1,26 @@
+@Phdthesis{ChristophThesis,
+author = "Aberle, Christopher",
+title = "{Optimization, simulation and analysis of the scintillation signals in the Double Chooz experiment}",
+year = "2011",
+school = "University of Heidelberg"
+}
+
+@article{SNOp-B8-bkg,
+      author         = "Maio, A.",
+      title          = "{Search for Majorana neutrinos with the SNO+ detector at
+                        SNOLAB}",
+      booktitle      = "{Proceedings of 16th International Conference on
+                        Calorimetry in High Energy Physics (CALOR 2014)}",
+      collaboration  = "SNO+",
+      journal        = "J. Phys. Conf. Ser.",
+      volume         = "587",
+      year           = "2015",
+      number         = "1",
+      pages          = "012030",
+      doi            = "10.1088/1742-6596/587/1/012030",
+      SLACcitation   = "%%CITATION = 00462,587,012030;%%"
+}
+
 @article{GERDA2013,
       author         = "Agostini, M. and others",
       COMtitle          = "{Results on Neutrinoless Double-$\beta$
