--- a/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
+++ b/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
@@ -8,7 +8,8 @@
 \linenumbers
 %\usepackage{setspace}
 %\doublespacing
-\setstretch{1.5}
+\setstretch{2.5}
+%\bibliography
 
 \title{Towards Separating Double-Beta Decay Events from Backgrounds in a Kiloton-Scale Directional Liquid Scintillator Detector}
 \input{authors}
@@ -51,8 +52,7 @@
 \section*{Acknowledgements}
 \input{acknowledgements}
 
-\bibliography{bibliography.bib}
-
+\bibliography{bibliography}
 %\appendix
 % The following line is a hack for elsevier to get the appendix and
 % the table of contents to play well together.
